# WAVsToAAF

./: .gitignore  CHANGELOG.md  FEATURE_SUMMARY.md  LICENSES.txt  LICENSES_mxtoaaf.txt  README.md  RELEASE_PROCEDURES.md  _version.py  build_mac.sh  requirements.txt  test_comprehensive_aaf_structure.py  test_directory_structure.py  test_single_file_aaf_dir.py  validate_bundle.sh  validate_windows.bat  wav_to_aaf.py  wav_to_aaf_gui.py  wav_to_otio_aaf.py
.github/: release_template.md
.github/workflows/: build.yml  python-tests.yml
aaf_embedder/: CMakeLists.txt  README.md  main.cpp
archive/: README.md  analyze_aaf.py  debug_aaf.py  deep_analyze_aaf.py  demo_features.py  test_ama_approach.py  test_avid_embedded.py  test_avid_embedded_fixed.py  test_mc_compatible.py  test_mc_exact.py  test_minimal_aaf.py
dev/: analyze_embedded_batch.py  inspect_aaf_metadata.py  make_avid_style_embedded.py  make_perchannel_embedded.py  stereo_experiments.py
docs/: README.rtf  README_mac.md  README_windows.md  UCS_Matching_Implementation_Guide.md
icons/: SIPS_IconResize_CommandString.rtf  iconset to icns_commandString.rtf  iconset_to_icns.md  resize_icon.sh
icons/mac/: WAVsToAAF.icns
packaging/: README_WINDOWS_STARTUP.md  WAVsToAAF-Windows.spec  build.sh  generate_version_info.py  gui_launcher.py  startup_wrapper.py
tempReference/MXToAAF/: .gitignore  MANIFEST.in  PACKAGING.md  README.md  (+5 more)
test_output/: test_tone.aaf
tests/: conftest.py  test_embedding_regression.py  test_pan_implementation.py  test_ucs_info_override.py  test_ucs_low_confidence_report.py  test_ucs_matching.py
(+17 files in other folders)
